--- a/cnode-api/package.json
+++ b/cnode-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example",
+  "name": "cnode-api",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -21,8 +21,8 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-example",
-    "stop": "egg-scripts stop --title=egg-server-example",
+    "start": "egg-scripts start --daemon --title=egg-server-cnode-api",
+    "stop": "egg-scripts stop --title=egg-server-cnode-api",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
     "test": "npm run lint -- --fix && npm run test-local",
