--- a/cnode-api/package.json
+++ b/cnode-api/package.json
@@ -5,12 +5,14 @@
   "private": true,
   "dependencies": {
     "egg": "^2.2.1",
-    "egg-scripts": "^2.5.0"
+    "egg-jsonp": "^2.0.0",
+    "egg-scripts": "^2.5.0",
+    "egg-validate": "^1.0.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
     "autod-egg": "^1.0.0",
-    "egg-bin": "^4.3.5",
+    "egg-bin": "^4.8.1",
     "egg-ci": "^1.8.0",
     "egg-mock": "^3.14.0",
     "eslint": "^4.11.0",
